2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/test-actors.cc: update example to use new BehaviourScale
	constructor API

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_docs.xml: re-generated documentation
	* clutter/src/stage.hg: wrapped missing functions
	* clutter/src/timeline.hg: wrapped missing functions
	* tools/m4/convert_cluttermm.m4: moved a conversion to the source file

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-scale.hg: wrapped new BehaviourScale API and fixed
	up some API changes (constructor, etc)
	* clutter/src/stage.hg: wrapped new Stage API
	* tools/m4/convert_cluttermm.m4: add conversions for Fog

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-scale.hg: update get_bounds() API that now takes a
	start and end instead of an angle

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_signals.defs: reverted a couple signal definitions back
	to take const parameters.  These were hand-changed and overwritten by
	re-generating the .defs file.

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-ellipse.hg: API change, angle degree arguments were
	changed from ClutterAngle to ClutterFixed in the C API

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_enums.defs:
	* clutter/src/clutter_methods.defs:
	* clutter/src/clutter_signals.defs: re-generated defs
	* clutter/src/actor.hg: wrapped the new Unit-related API (e.g. get_xu()).
	It might be nice to wrap the set_xu() functions as overloaded versions of
	set_x(), but that won't work for get_xu() since you can't overload on return
	values, so I left them all with the slightly awkward naming of the C
	functions.

2007-12-27  Daniel Elstner  <danielk@openismus.com>

	* examples/src/color.ccg: Eliminate leftover inclusion of removed
	clutter-layout.h header.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>
