@@ -1,3 +1,11 @@
+2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* clutter/src/score.ccg:
+	* clutter/src/score.hg:
+	* clutter/src/Makefile_list_of_hg.am_fragment: add new Score class
+	* clutter/src/clutter_docs_override.xml: override some documentation for the
+	Score class since I overloaded append() with a NULL parameter for parent
+
 2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* examples/test-actors.cc: update example to use new BehaviourScale
